# ChangeLog for dev-libs/yaz
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/ChangeLog,v 1.44 2008/02/06 19:09:03 nixnut Exp $

  06 Feb 2008; nixnut <nixnut@gentoo.org> yaz-3.0.16.ebuild:
  stable on ppc wrt bug #208545

  03 Feb 2008; Jeroen Roovers <jer@gentoo.org> yaz-3.0.16.ebuild:
  Stable for HPPA (bug #208545).

  03 Feb 2008; Markus Meier <maekke@gentoo.org> yaz-3.0.16.ebuild:
  x86 stable, bug #208545

  02 Feb 2008; Brent Baude <ranger@gentoo.org> yaz-3.0.16.ebuild:
  Marking yaz-3.0.16 ppc64 for bug 208545

*yaz-3.0.16 (24 Dec 2007)

  24 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  +files/yaz-3.0.16-icu-automagic.patch, +yaz-3.0.16.ebuild:
  Version bump, Bug 185287, from the php-overlay

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> yaz-2.1.42.ebuild:
  Stable on mips, per #173849.

  01 Jul 2007; Raúl Porcel <armin76@gentoo.org> yaz-2.1.42.ebuild:
  alpha stable wrt #173849

  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org> yaz-2.1.42.ebuild:
  stable amd64, bug 173849

  11 Apr 2007; Markus Rothe <corsair@gentoo.org> yaz-2.1.42.ebuild:
  Stable on ppc64; bug #173849

  11 Apr 2007; Jeroen Roovers <jer@gentoo.org> yaz-2.1.42.ebuild:
  Stable for HPPA (bug #173849).

  10 Apr 2007; Raúl Porcel <armin76@gentoo.org> yaz-2.1.42.ebuild:
  ia64 stable wrt bug 173849

  10 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> yaz-2.1.42.ebuild:
  Stable on sparc wrt #173849

  09 Apr 2007; nixnut <nixnut@gentoo.org> yaz-2.1.42.ebuild:
  Stable on ppc wrt bug 173849

  09 Apr 2007; Raúl Porcel <armin76@gentoo.org> yaz-2.1.42.ebuild:
  x86 stable wrt bug 173849

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*yaz-2.1.42 (27 Dec 2006)

  27 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> +yaz-2.1.42.ebuild:
  Bug #155460, version bump.

  03 Sep 2006; Joshua Kinard <kumba@gentoo.org> yaz-2.1.8-r1.ebuild:
  Marked stable on mips.
