@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/Attic/yaz-2.0.19.ebuild,v 1.9 2005/04/01 04:42:44 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/Attic/yaz-2.0.19.ebuild,v 1.10 2008/02/09 18:12:36 armin76 Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://ftp.indexdata.dk/pub/${PN}/${P}.tar.gz"
 
 LICENSE="YAZ"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha arm ~hppa ~amd64 ia64 s390 ppc64 ~mips"
+KEYWORDS="~alpha ~amd64 arm ~hppa ia64 ~mips ~ppc ppc64 s390 ~sparc ~x86"
 IUSE="tcpd"
 
 RDEPEND="dev-libs/libxml2
