@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/Attic/yaz-2.0.8.ebuild,v 1.13 2005/02/21 03:10:27 hardave Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/Attic/yaz-2.0.8.ebuild,v 1.14 2008/02/09 18:12:36 armin76 Exp $
 
 inherit eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.indexdata.dk/${PN}"
 SRC_URI="http://ftp.indexdata.dk/pub/${PN}/${P}.tar.gz"
 LICENSE="YAZ"
 SLOT="0"
-KEYWORDS="x86 ppc amd64 alpha ia64 hppa sparc mips"
+KEYWORDS="alpha amd64 hppa ia64 mips ppc sparc x86"
 IUSE="tcpd"
 RDEPEND="dev-libs/libxml2
 		dev-libs/openssl
