@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/yaz
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/ChangeLog,v 1.44 2008/02/06 19:09:03 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/yaz/ChangeLog,v 1.45 2008/02/09 18:12:36 armin76 Exp $
+
+  09 Feb 2008; Raúl Porcel <armin76@gentoo.org> yaz-2.0.8.ebuild,
+  yaz-2.0.19.ebuild, yaz-2.1.8.ebuild, yaz-3.0.16.ebuild:
+  alpha/ia64/sparc stable wrt #208545
 
   06 Feb 2008; nixnut <nixnut@gentoo.org> yaz-3.0.16.ebuild:
   stable on ppc wrt bug #208545
